# terrier

./: .editorconfig  .env.dev.example  .env.example  .env.prod.example  .env.production.example  .envrc  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  Dioxus.toml  Dockerfile  LICENSE  README.md  SETUP.md  backup_2026-01-26_0800.sql  backup_2026-01-26_0900.sql  biome.json  build.gradle.kts  crate-hashes.json  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  garnix.yaml  index.html  justfile  nginx.conf.example  podman-compose.yml  railpack.json  rust-toolchain.toml  schema.sql  secretspec.toml  tailwind.css  terrier.nginx.conf
.cargo/: config.toml
.github/workflows/: build-and-push.yml
app/: deno.json  index.html  package.json  svelte.config.js
app/src/: App.svelte  main.ts
assets/: manifest.json  tailwind.css
client/: openapi-ts.ts  package.json
crates/saml-proxy/: Cargo.toml  README.md
crates/saml-proxy/certs/: .gitignore
crates/saml-proxy/src/: attributes.rs  config.rs  error.rs  lib.rs  main.rs  session.rs  state.rs
crates/saml-proxy/src/discovery/: federation_index.rs  mod.rs
crates/saml-proxy/src/idp/: metadata.rs  mod.rs  slo.rs  sso.rs
crates/saml-proxy/src/sp/: acs.rs  initiate.rs  metadata.rs  mod.rs  slo.rs
crates/saml-proxy/static/: discovery.js
crates/saml-proxy/templates/: select.html
crates/saml-proxy/tests/: discovery_flow.rs
crates/slac/: Cargo.toml  README.md
crates/terrier-common/: Cargo.toml
crates/terrier-server/: Cargo.toml
crates/terrier-server/migration/: Cargo.toml
crates/terrier-server/migration/src/: lib.rs  m20260314_213956_create_initial_tables.rs  m20260616_200457_redesign_schema.rs
crates/terrier-server/src/: main.rs
crates/terrier-server/src/entities/: applicant.rs  application.rs  checkins.rs  evaluation.rs  event.rs  event_check_in.rs  events.rs  expo_evaluation.rs  hackathon.rs  hacker.rs  invitation.rs  judge.rs  judge_assignment.rs  judge_track_assign.rs  mod.rs  organizer.rs  prelude.rs  prize.rs  prize_track.rs  project.rs  project_track_sub.rs  reimbursement_application.rs  sea_orm_active_enums.rs  sponsor.rs  sponsor_org.rs  submission.rs  team.rs  team_member.rs  track.rs  user.rs  user_hackathon_role.rs
dioxus-forms/: Cargo.toml  README.md
dioxus-forms/src/: lib.rs  validators.rs
dioxus-forms/tests/: integration_test.rs
docs/: astro.config.mjs  openapi.json  package.json
example/: .env  .env.dev  .env.prod  docker-compose.yml  nginx.conf
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251130_100554_create_user_hackathon_tables.rs  m20251201_023320_create_teams_tables.rs  m20251201_044615_add_hackathon_banner_url.rs  m20251201_165412_add_hackathon_form_config.rs  m20251201_165433_create_applications_table.rs  m20251203_041138_create_team_join_requests.rs  m20251203_145251_create_team_invitations.rs  m20251203_220027_add_hackathon_background_url.rs  m20251204_045720_add_team_owner_id.rs  m20251229_003029_add_schedule_tables.rs  m20251229_043000_add_event_organizers.rs  m20251229_051500_add_event_location.rs  (+5 more)
mobile/: AndroidManifest.xml  Info.plist
nix/: devenv.nix  module.nix
public/: manifest.json
pwa_ios/: .gitignore  README.md  generate-icons.sh
rfcs/: 0001-core-architecture-tech-stack.md  0002-dev-environment-ci.md  0003-build-performance-dev-workflow.md  0004-documentation.md  0005-saml-proxy-university-auth.md  0006-observability.md  0007-mobile-architecture.md  0008-database-model.md  0009-slac.md  0010-user-flow.md  README.md
server/: settings.gradle.kts
src/: backend.rs  config.rs  docs.rs  main.rs  server.rs  types.rs
terrier-backend/: Cargo.toml
web/: bun.nix  package.json
(+284 files in other folders)
