[workspace]
resolver = "2"
members = [
  "crates/slac/",
  "crates/terrier-common/",
  "crates/terrier-server/",
  "crates/terrier-server/migration"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://codeberg.org/ScottyLabs/terrier"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["ws"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slac = { path = "crates/slac" }
terrier-common = { path = "crates/terrier-common" }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
